vA1.1 Fixing subnav jumping

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@
   
   /* SUBNAV BAR */
   .subnav-bar {
-    position: absolute;
+    position: fixed;
     top: 64px;
     left: 0;
     width: 100%;
@@ -207,6 +207,10 @@
     position: relative;
     z-index: 100;
   }
+
+  #projects {
+    scroll-margin-top: 110px; /* height of navbar (64px) + subnav (~46px) */
+  }  
   
   .content h2 {
     font-size: 2rem;
